{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 6,
  "lineage": "e009fcd7-cb4e-baf7-4407-c152d3ca8110",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:154204971707:loadbalancer/webservers-prod",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b",
              "us-west-2c",
              "us-west-2d"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "webservers-prod-1215667709.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webservers-prod",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webservers-prod",
            "security_groups": [
              "sg-0a55cba63b6fb5449"
            ],
            "source_security_group": "154204971707/webservers-prod-elb",
            "source_security_group_id": "sg-0a55cba63b6fb5449",
            "subnets": [
              "subnet-1c566365",
              "subnet-a7e99e8f",
              "subnet-c71a1e9d",
              "subnet-f5acfbbe"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:154204971707:security-group/sg-0a55cba63b6fb5449",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a55cba63b6fb5449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webservers-prod-elb",
            "name_prefix": null,
            "owner_id": "154204971707",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-92d30bea"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:154204971707:security-group/sg-04365ffc6cb34911d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04365ffc6cb34911d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webservers-prod-instance",
            "name_prefix": null,
            "owner_id": "154204971707",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-92d30bea"
          }
        }
      ]
    }
  ]
}